css/style.css
@import "./normalize.css";

/*Typography*/
::selection {
    background: var(--color-primary);
    color: white;
}

html {
    font-size: 62.5%;
}
.container {
    max-width: 1140px;
    margin: 0 auto;
}

:root {
    --color-primary: #2584ff;
    --color-secondary: #3ce2ff;
    --color-accent: #ff3400;
    --color-headings: #1b0760;
    --color-body: #918ca4;
    --color-body-darker: #5c5577;
    --color-border: #ccc;
    --border-radius: 3rem;
}
body {
    font-family: Inter, Arial, Helvetica, sans-serif;
    font-size: 2.4rem;
    line-height: 1.5;
    color: var(--color-body);
}
h1,
h2,
h3 {
    color: var(--color-headings);
    margin-bottom: 1rem;
    margin-top: 0;
    line-height: 1.1;
}
h1 {
    font-size: 7rem;
}
h2 {
    font-size: 4rem;
}
h3 {
    font-size: 3rem;
}
p {
    margin-top: 0;
}
@media screen and (min-width: 1024px) {
    body {
        font-size: 1.8rem;
    }
    h1 {
        font-size: 8rem;
    }
    h2 {
        font-size: 4rem;
    }
    h3 {
        font-size: 2.4rem;
    }
}

/* Links */
a {
    text-decoration: none;
}
.link-arrow {
    color: var(--color-accent);
    text-transform: uppercase;
    font-size: 2rem;
    font-weight: bold;
}
.link-arrow::after {
    content: "-->";
    margin-left: 5px;
    transition: margin 0.15s;
}
.link-arrow:hover::after {
    margin-left: 10px;
}
@media screen and (min-width: 1024px) {
    .link-arrow {
        font-size: 1.5rem;
    }
}

/* Badges */

.badge {
    border-radius: 20px;
    font-size: 2rem;
    font-weight: 600;
    padding: 0.5rem 2rem;
    white-space: nowrap;
}
.badge--primary {
    background: var(--color-primary);
    color: white;
}
.badge--secondary {
    background: var(--color-secondary);
    color: white;
}
.badge--primary-dark {
    background: #126de4;
}
.badge--small {
    font-size: 1.6rem;
    padding: 0.5rem 1.5rem;
}
@media screen and (min-width: 1024px) {
    .badge {
        font-size: 1.5rem;
    }
    .badge--small {
        font-size: 1.2rem;
    }
}

/* Lists */
.list {
    list-style: none;
    padding-left: 0;
    color: var(--color-headings);
}
.list--inline .list__item {
    display: inline-block;
    margin-right: 2rem;
}
.list--tick {
    list-style-image: url(../images/tick.svg);
    padding-left: 3rem;
}
.list--tick .list__item {
    padding-left: 0.5rem;
    margin-bottom: 1rem;
}
@media screen and (min-width: 1024px) {
    .list--tick .list__item {
        padding-left: 0;
    }
}

/* Icons */
.icon--white {
    fill: white;
}

.icon {
    width: 40px;
    height: 40px;
}
.icon--primary {
    fill: var(--color-primary);
}
.icon-container {
    align-items: center;
    background: #f3f9fa;
    border-radius: 100%;
    display: inline-flex;
    height: 64px;
    justify-content: center;
    width: 64px;
}

/* Buttons */
button {
    background-color: var(--color-accent);
    border-radius: 4rem;
    border: 0;
    color: white;
    font-size: 1.8rem;
    font-weight: bold;
    text-transform: uppercase;
    transition: scale 0.15s;
}
button:hover {
    scale: 1.15;
    cursor: pointer;
}
p {
    margin: 0;
}
.button--primary {
    height: 6.8rem;
    width: 30rem;
}
.button--buy {
    background-color: white;
    border-color: var(--color-headings);
    border: 2px solid var(--color-headings);
    color: var(--color-headings);
    font-weight: 600;
    height: 6rem;
    width: 25rem;
}
.button--tertiary {
    background-color: var(--color-headings);
    color: white;
}

.icon--search {
    height: 2.4rem;
    width: 2.4rem;
    padding-right: 1.5rem;
    fill: white;
}
.button--search {
    align-items: center;
    display: inline-flex;
    font-size: 1.5rem;
    justify-content: center;
    text-align: center;
    padding: 2rem;
}
.button--get2 {
    background-color: var(--color-secondary);
    height: 7.5rem;
    width: 25rem;
}
@media screen and (min-width: 1024px) {
    button {
        font-size: 1.5rem;
    }
    .button--primary {
        height: 6.3rem;
        width: 19rem;
    }
    .button--search {
        height: 5.7rem;
        width: 17.6rem;
    }
    .button--buy {
        height: 5.5rem;
        width: 26rem;
    }
    .button--get2 {
        height: 6rem;
        width: 22.6rem;
    }
}

/* Inputs */
.input {
    border-radius: var(--border-radius);
    border: 1px solid var(--color-border);
    color: var(--color-headings);
    font-size: 2rem;
    outline: 0;
    padding: 1.5rem 3.5rem;
}
::placeholder {
    color: #cdcbd7;
}

.input-group {
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius);
    display: flex;
}
.input-group .input {
    border: 0;
    flex-grow: 1;
    padding: 1.5rem 1rem;
    width: 0;
}
.input-group button {
    margin: 4px;
}
@media screen and (min-width: 1024px) {
    .input {
        font-size: 1.5rem;
    }
}

/* Cards */
.card {
    border-radius: 7px;
    box-shadow: 0 0 20px 10px #f3f3f3;
    overflow: hidden;
}
.card button {
    margin: auto;
}

.card__header,
.card__body {
    padding: 2rem 3rem;
}
.card--primary .card__header {
    background: var(--color-primary);
    color: white;
}
.card--secondary .card__header {
    background: var(--color-secondary);
    color: white;
}
.card--secondary .badge--secondary {
    background: #02cdf1;
}

/* Plan */

.plan {
    transition: scale 0.15s;
}

.plan:hover {
    scale: 1.05;
}

.plan__name {
    color: white;
    margin: 0;
    font-weight: 500;
    font-size: 2.4rem;
}
.plan__price {
    font-size: 6rem;
}
.plan__billing-cycle {
    font-size: 2.4rem;
    font-weight: 300;
    opacity: 0.8;
    margin-right: 1rem;
}
.plan__description {
    font-size: 2rem;
    font-weight: 300;
    letter-spacing: 1px;
    display: block;
}
.plan .list__item {
    margin-bottom: 2rem;
    letter-spacing: 1px;
}
.plan--popular .card__header {
    position: relative;
}
.plan--popular .card__header::before {
    content: url(../images/popular.svg);
    width: 40px;
    display: inline-block;
    position: absolute;
    top: -6px;
    right: 5%;
}
/* ... */

